<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.dubture.twig</groupId>
	<artifactId>parent</artifactId>
	<version>2.3.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<modules>
		<module>com.dubture.twig.core</module>
		<module>com.dubture.twig.ui</module>
		<module>com.dubture.twig.test</module>
		<module>com.dubture.twig.feature</module>
		<module>repository</module>
	</modules>

	<properties>
		<tycho-version>2.3.0</tycho-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<enforcer.requireMavenVersion>[3.8.1,4.0.0)</enforcer.requireMavenVersion>

		<pdt.version>latest-nightly</pdt.version>
		<dltk.version>latest-nightly</dltk.version>
		<core-plugin.url>http://pdt-eg.github.io/Core-Plugin/nightly</core-plugin.url>
		<external-mirror.url>http://pdt-eg.github.io/external-mirror/nightly</external-mirror.url>
		<!-- note: the "glhez." must be changed on root repo... -->
		<indexing.url>https://glhez.github.io/eclipse-indexing-framework</indexing.url>
		<test.vmargs>-Xmx512m -XX:MaxPermSize=256m</test.vmargs>
	</properties>

	<repositories>
		<repository>
			<id>eclipse.org-2021-06</id>
			<url>https://download.eclipse.org/releases/2021-06</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>eclipse.org-updates-4.20</id>
			<url>https://download.eclipse.org/eclipse/updates/4.20</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>dltk</id>
			<layout>p2</layout>
			<url>https://download.eclipse.org/technology/dltk/updates-dev/${dltk.version}/</url>
		</repository>
		<repository>
			<id>pdt</id>
			<layout>p2</layout>
			<url>https://download.eclipse.org/tools/pdt/updates/${pdt.version}/</url>
		</repository>
		<!-- <repository>
			<id>core-plugin</id>
			<layout>p2</layout>
			<url>${core-plugin.url}</url>
		</repository>
		<repository>
			<id>external-mirror</id>
			<layout>p2</layout>
			<url>${external-mirror.url}</url>
		</repository>-->
		<repository>
			<id>orbit</id>
			<layout>p2</layout>
			<url>https://download.eclipse.org/tools/orbit/downloads/drops/R20210602031627/repository/</url>
		</repository>
		<repository>
			<id>sonatype</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
			<layout>default</layout>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>indexing</id>
			<layout>p2</layout>
			<url>${indexing.url}</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>com.dubture.osgi</groupId>
			<artifactId>org.json.simple</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.0.0-M1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.0.0-M1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.9.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>3.0.0-M3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-maven-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>target-platform-configuration</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-packaging-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<version>${tycho-version}</version>
					<artifactId>tycho-p2-publisher-plugin</artifactId>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-repository-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<argLine>${test.vmargs}</argLine>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<inherited>true</inherited>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>${enforcer.requireMavenVersion}</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<pomDependencies>consider</pomDependencies>
					<environments>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
